# libhybris-1

compat/hwc2/: hwc2_compatibility_layer.cpp
hybris/: Makefile.am  configure.ac  meson.build  meson_options.txt
hybris/common/: Makefile.am  hooks.c  meson.build  wrappers.c
hybris/common/jb/: dlfcn.c  linker.c
hybris/common/o/: meson.build
hybris/common/q/: linker_tls.cpp  meson.build
hybris/egl/: egl.c  meson.build  ws.c
hybris/egl/glvnd/: meson.build
hybris/glesv2/: glesv2.c
hybris/gralloc/: gralloc.c
hybris/include/: Makefile.am
hybris/include/hybris/gralloc/: gralloc.h
hybris/tests/: Makefile.am  meson.build  test_camera.c  test_common.c  test_common.cpp  test_common.h  test_glesv2.c  test_glesv2.cpp  test_glesv3.cpp  test_hwc2.cpp  test_hwcomposer.cpp  test_vulkan.cpp
hybris/vulkan/: Makefile.am  vulkan.c  vulkan.pc.in  vulkanhybris.h  ws.c  ws.h
