option('adreno_quirks', type : 'boolean', value : false)
option('android_headers_dir', type : 'string', description : 'Use android headers available in DIR. See utils/extract-headers.sh')
option('arch', type : 'combo', choices : ['arm', 'arm64', 'x86', 'x86-64'])
option('arm_tracing', type : 'boolean', value : false)
option('default_egl_platform', type : 'string', value : 'null', description : 'Use NAME as default EGL platform if not specified by environment')
option('default_hybris_ld_library_path', type : 'string', description : 'Use PATH1:PATH2 for default HYBRIS_LD_LIBRARY_PATH if not specified by environment')
option('enable_debug', type : 'boolean', value : false)
option('glvnd', type : 'boolean', value : false)
option('property_cache', type : 'boolean', value : false)
option('enable_trace', type : 'boolean', value : false)
option('stub_linker', type : 'boolean', value : false)
option('ubuntu_camera_headers', type : 'boolean', value : false)
option('ubuntu_linker_overrides', type : 'boolean', value : false)
option('wayland', type : 'boolean', value : false)
option('wayland_serverside_buffers', type : 'boolean', value : true)
